Add base chess layout

--- a/index.html
+++ b/index.html
@@ -3,14 +3,110 @@
   <head>
     <meta charset="UTF-8">
     <title>Chess Board Generator</title>
+
+    <style>
+      .board {
+        aspect-ratio: 1;
+        display: grid;
+        grid-template-columns: repeat(8, 1fr);
+      }
+
+      .square {
+        aspect-ratio: 1;
+      }
+
+      .square.square-odd {
+        background: steelblue;
+      }
+
+      .square.square-even {
+        background: lightgray;
+      }
+    </style>
+
+    <script>
+
+    </script>
   </head>
   <body>
     <header>
-      I'm testing how GitHub Pages works.
+
     </header>
 
     <main>
-      TODO: Make something awesome!
+      <div class="board">
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+        <div class="square square-even"></div>
+        <div class="square square-odd"></div>
+      </div>
     </main>
 
     <footer>
