--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Chess Board Generator</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <style>
       @media print {
