--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <style>
+      * {
+        box-sizing: border-box;
+        font-family: sans-serif;
+      }
+
       @media print {
         * {
           print-color-adjust: exact;
           -webkit-print-color-adjust: exact;
         }
-      }
-
-      * {
-        box-sizing: border-box;
-        font-family: sans-serif;
       }
 
       body {
@@ -70,23 +70,24 @@
         gap: var(--separation-amount);
         grid-template-columns: repeat(8, 1fr);
         grid-template-rows: repeat(8, 1fr);
-        transition: gap ease-in-out 300ms;
+        transition: gap, margin-left ease-in-out 300ms;
         justify-content: center;
         align-content: center;
         width: calc(100vmin - 2em);
         height: calc(100vmin - 2em);
       }
 
+      @media screen and (min-width: calc(100vmin + 20em)) {
+        .board {
+          margin-left: 20em;
+        }
+      }
+
       @media print {
         .board {
           width: 100vmin;
           height: 100vmin;
-        }
-      }
-
-      @media screen and (min-width: calc(100vmin + 20em)) {
-        .board {
-          margin-left: 20em;
+          margin-left: 0;
         }
       }
 
@@ -162,6 +163,7 @@
             type="number"
             min="0"
             value="0"
+            step="0.1"
           >
         </label>
 
@@ -183,7 +185,8 @@
       </form>
 
       <footer>
-        This chess board generator has been developed to customize your own printable chess board.
+        This chess board generator has been developed to customize your own
+        printable chess boards.
         <br>
         Do you have a 3D printer?
         <a
