--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
       label:hover,
       label:focus {
-        color: var(--odd-color);
+        color: #4e8eaa;
       }
 
       label[for=odd-color] {
@@ -93,7 +93,7 @@
         width: 100%;
         height: 32px;
         appearance: none;
-        border: solid 1px var(--even-color);
+        border: solid 1px #738d98;
         padding: 3px;
         outline: none;
         background: #f5f5f5;
@@ -106,7 +106,7 @@
       input:focus,
       button:hover,
       button:focus {
-        border-color: var(--odd-color);
+        border-color: #4e8eaa;
         background: #ffffff;
       }
 
@@ -131,26 +131,26 @@
       }
 
       .button-reset {
-        color: var(--even-color);
+        color: #000000;
       }
 
       .button-reset:hover,
       .button-reset:focus {
-        color: var(--odd-color);
+        color: #4e8eaa;
       }
 
       .button-print {
-        color: var(--odd-color);
+        color: #ffffff;
         grid-area: button-print;
         border: none;
-        background: var(--even-color);
+        background: #738d98;
       }
 
       .button-print:hover,
       .button-print:focus {
-        color: var(--even-color);
+        color: #ffffff;
         border: none;
-        background: var(--odd-color);
+        background: #4e8eaa;
       }
 
       footer {
@@ -160,7 +160,7 @@
       }
 
       a {
-        color: var(--even-color);
+        color: #738d98;
         text-decoration: underline;
         font-weight: bold;
         transition: color ease-in-out 200ms;
@@ -168,7 +168,7 @@
 
       a:hover,
       a:focus {
-        color: var(--odd-color);
+        color: #4e8eaa;
       }
 
       .board {
