--- a/index.html
+++ b/index.html
@@ -4,237 +4,8 @@
     <meta charset="UTF-8">
     <title>Chess Board Generator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <style>
-      * {
-        box-sizing: border-box;
-        font-family: sans-serif;
-      }
-
-      @media print {
-        * {
-          print-color-adjust: exact;
-          -webkit-print-color-adjust: exact;
-        }
-      }
-
-      p {
-        margin: 0;
-      }
-
-      body {
-        width: 100vw;
-        height: 100vh;
-        margin: 0;
-        overflow: hidden;
-        display: grid;
-        align-content: center;
-        justify-content: center;
-      }
-
-      main {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        padding: 16px;
-        gap: 16px;
-        overflow-y: auto;
-        z-index: 1;
-        background: rgba(255, 255, 255, 0.8);
-        backdrop-filter: blur(0.25em);
-        width: 320px;
-        max-width: 90vw;
-      }
-
-      @media print {
-        main {
-          display: none;
-        }
-      }
-
-      form {
-        display: grid;
-        gap: 16px;
-        grid-template-areas:
-          "odd-color         even-color"
-          "separation-amount separation-color"
-          "button-reset      button-print";
-        grid-template-columns: 1fr 1fr;
-      }
-
-      label {
-        transition: color ease-in-out 200ms;
-      }
-
-      label:hover,
-      label:focus {
-        color: #4e8eaa;
-      }
-
-      label[for=odd-color] {
-        grid-area: odd-color;
-      }
-
-      label[for=even-color] {
-        grid-area: even-color;
-      }
-
-      label[for=separation-amount] {
-        grid-area: separation-amount;
-      }
-
-      input,
-      button {
-        display: block;
-        width: 100%;
-        height: 32px;
-        appearance: none;
-        border: solid 1px #738d98;
-        padding: 3px;
-        outline: none;
-        background: #f5f5f5;
-        transition-property: border, background, color;
-        transition-timing-function: ease-in-out;
-        transition-duration: 200ms;
-      }
-
-      input:hover,
-      input:focus,
-      button:hover,
-      button:focus {
-        border-color: #4e8eaa;
-        background: #ffffff;
-      }
-
-      input[type=color] {
-        cursor: pointer;
-      }
-
-      input[type=color]::-moz-color-swatch {
-        border: none;
-      }
-
-      input[type=color]::-webkit-color-swatch {
-        border: none;
-      }
-
-      input[type=color]::-webkit-color-swatch-wrapper {
-        padding: 0;
-      }
-
-      .button-reset {
-        grid-area: button-reset;
-      }
-
-      .button-reset {
-        color: #000000;
-      }
-
-      .button-reset:hover,
-      .button-reset:focus {
-        color: #4e8eaa;
-      }
-
-      .button-print {
-        color: #ffffff;
-        grid-area: button-print;
-        border: none;
-        background: #738d98;
-      }
-
-      .button-print:hover,
-      .button-print:focus {
-        color: #ffffff;
-        border: none;
-        background: #4e8eaa;
-      }
-
-      footer {
-        display: flex;
-        flex-direction: column;
-        gap: 16px;
-      }
-
-      a {
-        color: #738d98;
-        text-decoration: underline;
-        font-weight: bold;
-        transition: color ease-in-out 200ms;
-      }
-
-      a:hover,
-      a:focus {
-        color: #4e8eaa;
-      }
-
-      .board {
-        display: grid;
-        gap: var(--separation-amount);
-        grid-template-columns: repeat(8, 1fr);
-        grid-template-rows: repeat(8, 1fr);
-        transition-property: gap, margin-left;
-        transition-timing-function: ease-in-out;
-        transition-duration: 200ms;
-        justify-content: center;
-        align-content: center;
-        width: calc(100vmin - 2em);
-        height: calc(100vmin - 2em);
-      }
-
-      @media screen and (min-width: calc(320px + 100vmin)) {
-        .board {
-          margin-left: 320px;
-        }
-      }
-
-      @media print {
-        .board {
-          width: 100vmin;
-          height: 100vmin;
-          margin-left: 0;
-        }
-      }
-
-      .square {
-        transition: background-color ease-in-out 200ms;
-      }
-
-      .square.square-odd {
-        background: var(--odd-color);
-      }
-
-      .square.square-even {
-        background: var(--even-color);
-      }
-    </style>
-
-    <script>
-      function updateBoard() {
-        const body = document.querySelector('body');
-        const oddColor = document.querySelector('#odd-color');
-        const evenColor = document.querySelector('#even-color');
-        const separation = document.querySelector('#separation-amount');
-
-        body.style.setProperty('--odd-color', oddColor.value);
-        body.style.setProperty('--even-color', evenColor.value);
-        body.style.setProperty('--separation-amount', separation.value + 'mm');
-      }
-
-      function resetBoard() {
-        const form = document.querySelector('form');
-
-        form.reset();
-        updateBoard();
-      }
-
-      function printBoard() {
-        window.print();
-      }
-    </script>
+    <script src="./app.js"></script>
+    <link rel="stylesheet" href="./styles.css">
   </head>
   <body
     style="
